fix menu on mobile version

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6175,7 +6175,7 @@ a:active {
     position:absolute;
 }
 
-#sideNav .navbar-collapse .navbar-nav .nav-item {
+.nav-item {
     display: block;
     background-color: #309eff;
     margin: 10px;
@@ -6188,5 +6188,8 @@ background-color: #e3f0fb;
 
 .navbar-dark .navbar-nav .nav-link {
     color: rgb(255, 255, 255);
+}
+#sideNav {
+    text-align: center;
 }/*
 @import "../font-awesome/css/font-awesome.min.css";*/
